KIC/cafe-demo-2/cafe-ingress-annot.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress-annot
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.org/server-snippets: |
      location / {
        return 302 /coffeee;
      }
spec:
  rules:
  - host: cafe.192.168.1.80.nip.io
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 8081
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 8082
